# paper-rolling

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  HANDOFF.md  NOTICE  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: final_review_reminder.py
.claude/rules/: 00-principles.md  failure-recovery.md
_failed/: 2026-06-07_CosmosWorldFoundationModelPlatformForPhysicalAI_2501.03575.md  2026-06-08_APragmaticVLAFoundationModel_2601.18692.md  2026-06-08_COMBAT_2603.00825.md  2026-06-08_DiffusionForWorldModeling_2405.12399.md  2026-06-08_DriveDreamerPolicy_2604.01765.md  2026-06-08_Genie_2402.15391.md  2026-06-08_ORION_2503.19755.md  2026-06-08_World4Drive_2507.00603.md  2402.15391.md  2405.12399.md  2407.01392.md  2408.14197.md  2501.03575.md  2503.15558.md  2503.19755.md  2507.00603.md  2509.24527.md  2510.20668.md  2511.00062.md  2601.18692.md  2603.00825.md  2604.01765.md  2606.02800.md
_ledger/: processed_ledger.yaml
config/: audit.yaml  campaign.yaml  campaign.yaml.example  llm.yaml
corpus/1803.10122_WorldModels/: .md_contract.json  1803.10122_WorldModels.md  content_list.json
corpus/2301.04104_MasteringDiverseDomainsThroughWorldModel/: .md_contract.json  (+2 more)
docs/: EXTENDING.md  INDEX.md  ROADMAP.md
tests/: conftest.py  test_adapters.py  test_audit_config.py  test_bibliography.py  test_campaign.py  test_demote.py  test_engine_version.py  test_eval_harness.py  test_examples.py  test_failure_scene.py  test_hub.py  test_landscapes.py  test_paths.py  test_paths_ara_litmus.py  test_preflight.py  test_revival.py  test_run_campaign.py  test_scaffold.py  test_skill_doc.py  test_spoke.py  test_spoke_abort_scene.py  test_status.py
(+1213 files in other folders)
