# pyproject.toml
[project]
name = "paper-rolling"
version = "0.1.0"
description = "Autonomous AI paper-knowledge-processing engine (paper-landscape v2)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-NC-4.0" }
authors = [{ name = "ShinewineW" }]
dependencies = [
    "requests>=2.32",
    "pyyaml>=6.0",
    "rapidfuzz>=3.9",
    "lxml>=5.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Exclude accumulated dual-chain products — generated artifacts, not engine source:
#   ai_package/   = AI chain (branch2 ARA packs; their ara/src/ sample code is generated)
#   person_vault/ = human chain (branch1 reports)
extend-exclude = ["ai_package", "person_vault"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".claude/skills/paper-landscape"]
